// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar/Large matches snapshot 1`] = `
<div>
  <span
    class="group/avatar relative flex shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten size-16"
    data-size="default"
    data-slot="avatar"
  >
    <span
      class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
      data-slot="avatar-fallback"
    >
      CN
    </span>
  </span>
</div>
`;

exports[`Avatar/Small matches snapshot 1`] = `
<div>
  <span
    class="group/avatar relative flex shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten size-6"
    data-size="default"
    data-slot="avatar"
  >
    <span
      class="flex size-full items-center justify-center rounded-full bg-muted text-muted-foreground group-data-[size=sm]/avatar:text-xs text-[8px]"
      data-slot="avatar-fallback"
    >
      AB
    </span>
  </span>
</div>
`;

exports[`Avatar/WithFallback matches snapshot 1`] = `
<div>
  <span
    class="group/avatar relative flex size-8 shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten"
    data-size="default"
    data-slot="avatar"
  >
    <span
      class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
      data-slot="avatar-fallback"
    >
      JD
    </span>
  </span>
</div>
`;

exports[`Avatar/WithImage matches snapshot 1`] = `
<div>
  <span
    class="group/avatar relative flex size-8 shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten"
    data-size="default"
    data-slot="avatar"
  >
    <span
      class="flex size-full items-center justify-center rounded-full bg-muted text-sm text-muted-foreground group-data-[size=sm]/avatar:text-xs"
      data-slot="avatar-fallback"
    >
      CN
    </span>
  </span>
</div>
`;
